# packages/sight-backend/swagger.yaml
@@ -72,33 +72,33 @@ definitions:
   createEndpointDto:
     type: object
     properties:
-      data:
-        type: object
-        properties:
-          name:
-            type: string
-            description: Endpoint name
-          tls:
-            type: object
-            properties:
-              active:
-                type: boolean
-              ca:
-                type: boolean
-              cert:
-                type: boolean
-              key:
-                type: boolean
-          type:
-            type: number
-            description: Endpoint type
-          url:
-            type: string
-            description: Endpoint url
       tempId:
         type: number
-        description: "Temp ID for create the folder to check connection"
-
+        description: Temp ID for create the folder to check connection
+      name:
+        type: string
+        default: Name
+        description: Endpoint name
+      tls:
+        type: object
+        properties:
+          ca:
+            type: boolean
+            default: false
+          cert:
+            type: boolean
+            default: false
+          key:
+            type: boolean
+            default: false
+      type:
+        type: number
+        default: 1
+        description: Endpoint type
+      host:
+        type: string
+        default: Host
+        description: Endpoint host
 schemes:
  - https
  - http
